--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey, I am a big heading</h1>
-<p>Hey, I am a paragraph element</p>
-<a href="https://google.com" target="_blank" title="Let's go to google">Click me, I am a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey, I am a big heading</h1>
+	<p>Hey, I am a <b>paragraph</b> element</p>
+	<p>My name is:<br>
+	Cape Town</p>
+	<a href="https://google.com" target="_blank" title="Let's go to google">Click me, I am a link!</a>
+	<img src="img/CT1.jpeg">
+</body>
+</html>
